made the navbar design according to figma and made it responsive

--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechWave</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
-<body>
+<body class="inter-font">
 
     <header>
-        <nav>
-            <h1>TechWave</h1>
+        <!--Navbar design-->
+        <nav class="navbar">
+            <div class="nav-logo">Tech<span class="linear">Wave</span></div>
+            <div class="nav-links hidden md:flex">
+                <a href="">About</a>
+                <a href="">Episodes</a>
+                <a href="">Host</a>
+            </div>
+            <button class="nav-btn">
+                <div class="btn-text">Subscribe</div>
+            <div class="btn-logo">
+                <img src="assets/Vector.png" alt="">
+            </div>
+        </button>
+        <div class="menu-icon">
+            <img src="assets/hamburger-menu.png" alt="">
+        </div>
         </nav>
            
         
