--- a/index.html
+++ b/index.html
@@ -72,6 +72,72 @@
 
         <!--Features section-->
         <section class="features">
+            <div class="episodes-container">
+
+              <h2 class="section-title">Featured Episodes</h2>
+
+              <div class="episodes-grid">
+
+      <!-- Card 1 -->
+      <div class="episode-card">
+        <div class="video-wrapper">
+        
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/2_bYR3kR0w0?si=0DjnrqVXTkr3Bore" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          
+        </div>
+
+        <h3>The Future of AI in Everyday Life</h3>
+        <p>
+        Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.
+        </p>
+
+        <div class="episode-time">
+          <span class="dot"></span>
+          42 min
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="episode-card">
+        <div class="video-wrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mmMG_56bEFQ?si=CBPcN5BcBdI3NN-L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        <h3>Building Better Habits for Remote Work</h3>
+        <p>
+          Practical strategies for staying productive and maintaining
+          work-life balance in a remote environment.
+        </p>
+
+        <div class="episode-time">
+          <span class="dot"></span>
+          35 min
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="episode-card">
+        <div class="video-wrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Cqw8fZhggbQ?si=lz15SSlOK7ZR0mZL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="play-overlay">
+                <img src="assets/clock.png" alt="">
+            </div>
+        </div>
+
+        <h3>Career Growth in Tech: A Roadmap</h3>
+        <p>
+          Expert advice on navigating your tech career from junior developer
+          to senior leadership roles.
+        </p>
+
+        <div class="episode-time">
+          <span class="dot"></span>
+          51 min
+        </div>
+      </div>
+
+    </div>
+  </div>
         </section>
 
         <!--Meet the host section-->
