--- a/index.html
+++ b/index.html
@@ -36,39 +36,66 @@
     <main>
         <!--Hero Section-->
         <section class="hero-container">  
-            <div class="hero-top"></div>
-            <div class="hero-bottom">
-                <h1>TechWave</h1>
-                <p> Your daily dose of tech insights, productivity hacks, and personal growth</p>
-            </div>
-            <div class="hero-button">
-                <button class="btn-one">Listen on Spotify</button>
-                    <button class="btn-two">Subscribe</button>
-            </div>
-          
-            <!--<img class="img img1" src="assets/hero-bg.png" alt="">
-            <img class="img img2" src="assets/hero-circle.png" alt="">
-            <div class="hero-content">
-                <div class="circle animate-pulse">
-                    <span class="newbadge">New</span>
-                    <img src="assets/microphone.png" alt="">
-                </div>
-                <h1>TechWave</h1>
-                <p> Your daily dose of tech insights, productivity hacks, and personal growth</p>
-                <div class="hero-btn">
-                    <button class="btn-one transition duration-300 hover: scale-105">Listen on Spotify</button>
-                    <button class="btn-two transition duration- 300 hover: scale-150">Subscribe</button>
-                </div>
-            </div>-->
-
-
         </section>
 
         <section class="about">
         </section>
 
-        <section class="choose">
-        </section>
+        <!--Choice section-->
+        <section id="techwave" class="why-techwave">
+    <div class="choose-container">
+        <h2 class="choose-title">Why Choose TechWave</h2>
+
+        <div class="grid">
+            <div class="card tall">
+                <img src="assets/headphone.png" alt="">
+                <h3>Premium Audio Quality</h3>
+                <p>
+                    Experience crystal-clear sound with professional-grade recording
+                    equipment and expert audio engineering. Every episode is mastered
+                    for optimal listening across all devices and platforms.
+                </p>
+            </div>
+
+            <div class="card wide">
+                <img src="assets/device.png" alt="">
+                <h3>Mobile Friendly</h3>
+                <p>
+                    Listen on the go with seamless mobile experience and offline downloads.
+                </p>
+            </div>
+
+            <div class="card wide">
+                <img src="assets/location.png" alt="">
+                <h3>Global Community</h3>
+                <p>
+                    Connect with tech enthusiasts from over 120 countries worldwide.
+                </p>
+            </div>
+
+            <div class="card wide">
+                <img src="assets/zap-fast.png" alt="">
+                <h3>Exclusive Interviews</h3>
+                <p>
+                    Get unprecedented access to industry titans, startup founders, and tech
+                    visionaries. Our host secures exclusive conversations you won't find
+                    anywhere else, diving deep into their journeys, failures, and success
+                    strategies.
+                </p>
+            </div>
+            
+            <div class="card">
+                <img src="./assets/resource.png" alt="">
+                <h3>Rich Resources</h3>
+                <p>
+                    Access show notes, transcripts, and additional learning materials for
+                    every episode.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
 
         <!--Features section-->
         <section class="features">
@@ -137,7 +164,7 @@
       </div>
 
     </div>
-  </div>
+         </div>
         </section>
 
         <!--Meet the host section-->
