--- a/index.html
+++ b/index.html
@@ -38,7 +38,45 @@
         <section class="hero-container">  
         </section>
 
+        <!--About Section-->
         <section class="about">
+             <div class="about-container">
+
+    <h2 class="about-title">About The Podcast</h2>
+
+    <p class="about-description">
+        TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.
+      <br><br>
+      Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+    </p>
+
+    <div class="stats">
+      <div class="stat">
+        <i class="fa-solid fa-headphones"></i>
+        <h3>150K+</h3>
+        <span>Monthly Listeners</span>
+      </div>
+
+      <div class="stat">
+        <i class="fa-solid fa-microphone"></i>
+        <h3>200+</h3>
+        <span>Episodes Published</span>
+      </div>
+
+      <div class="stat">
+        <i class="fa-solid fa-star"></i>
+        <h3>4.9★</h3>
+        <span>Average Rating</span>
+      </div>
+
+      <div class="stat">
+        <i class="fa-solid fa-user-tie"></i>
+        <h3>50+</h3>
+        <span>Industry Experts</span>
+      </div>
+    </div>
+
+  </div>
         </section>
 
         <!--Choice section-->
@@ -83,7 +121,7 @@
                     strategies.
                 </p>
             </div>
-            
+
             <div class="card">
                 <img src="./assets/resource.png" alt="">
                 <h3>Rich Resources</h3>
@@ -94,7 +132,7 @@
             </div>
         </div>
     </div>
-</section>
+       </section>
 
 
         <!--Features section-->
