added button icons

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
 
       <div class="buttons">
-        <a href="#" class="btn btn-gradient">Listen on Spotify</a>
-        <a href="#" class="btn btn-outline">Subscribe</a>
+        <a href="#" class="btn btn-gradient"><img src="assets/spotify.png">Listen on Spotify</a>
+        <a href="#" class="btn btn-outline"><img src="assets/message.png">Subscribe</a>
       </div>
     </div>
   </section>
